<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdeecoActivity" >

    <Button
        android:id="@+id/start_nodea"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:onClick="startBundle"
        android:text="@string/start_nodea" />

    <Button
        android:id="@+id/start_nodeb"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_nodea"
        android:layout_alignBottom="@+id/start_nodea"
        android:layout_toRightOf="@+id/start_nodea"
        android:onClick="startBundle"
        android:text="@string/start_nodeb" />

    <Button
        android:id="@+id/start_migration"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/start_nodeb"
        android:layout_below="@+id/start_nodeb"
        android:layout_toRightOf="@+id/start_alert"
        android:onClick="startBundle"
        android:text="@string/start_migration" />

    <Button
        android:id="@+id/start_alert"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/start_nodea"
        android:layout_alignTop="@+id/start_migration"
        android:layout_alignBottom="@+id/start_migration"
        android:onClick="startBundle"
        android:text="@string/start_alert" />

    <cz.cuni.mff.ms.siptak.adeecolib.LogView
        android:id="@+id/logView1"
        android:textIsSelectable="true"
        android:scrollbars="vertical"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollHorizontally="true"
        android:layout_alignLeft="@+id/start_alert"
        android:layout_below="@+id/start_migration"
         />

    <Button
        android:id="@+id/runtime_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_nodeb"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/start_nodeb"
        android:layout_toRightOf="@+id/start_nodea"
        android:onClick="pauseRuntime"
        android:text="@string/pause_runtime" />

</RelativeLayout>